# raptor

./: .atm.toml  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: arch-qa.md  quality-mgr.md  registry.yaml  req-qa.md  rust-best-practices-agent.md  rust-qa-agent.md  rust-scrum-master.md  simplification-reviewer.md  simplification-strategy.md
.claude/hooks/: session_start_context.py
.claude/skills/codex-orchestration/: SKILL.md  code-review-template.xml.j2  codex-review-template.xml.j2  dev-template.xml.j2  qa-template.xml.j2  review-template.xml.j2
.claude/skills/codex-orchestration/examples/: dev-template-vars.json  qa-template-vars.json
.claude/skills/docs/: README.md
.claude/skills/libs/resilience/: README.md
.claude/skills/libs/ux/: README.md
.claude/skills/quality-management-gh/: SKILL.md
.claude/skills/resilience/: README.md
.claude/skills/rust-best-practices/: SKILL.md
.claude/skills/rust-phase-orchestration/: SKILL.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2  report.md.j2
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md  cross-platform-guidelines.md
.claude/skills/universal/: README.md
.claude/skills/ux/: README.md
.github/workflows/: ci.yml
crates/raptor-cli/: Cargo.toml
crates/raptor-cli/src/: main.rs
crates/raptor-core/: Cargo.toml
crates/raptor-core/src/: error.rs
docs/: architecture.md  startup-hook.md
