[package]
name = "raptor-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core library for raptor"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
